--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="descrption" content="Um site de exemplo do módulo de CSS">
     <meta name="keywords" content="Agência Digital, CSS, HTML">
     <title>Agência Fake</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <nav class="navbar">
