--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="img-headline">
-            <img src="/agencia-fake/img/hero_right.png" alt="Imagem headline">
+            <img src="agencia-fake/img/hero_right.png" alt="Imagem headline">
         </div>
     </header>
 
@@ -41,7 +41,7 @@
         <h2>O que podemos fazer pelo seu negócio?</h2>
         <div class="services">
             <div class="card">
-                <img src="/agencia-fake/img/pc.png" alt="Notebook com simbolo de desenvolvimento">
+                <img src="agencia-fake/img/pc.png" alt="Notebook com simbolo de desenvolvimento">
                 <div class="card-text">
                     <h3>Desenvolvimento de sites</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut sequi qui pariatur amet! Aut maiores ut alias modi illum sit placeat corporis tempore nisi magni esse, accusamus, architecto inventore.</p>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/agencia-fake/img/smartphone.png" alt="Smartphone simbolizando a criação de aplicativos mobile">
+                <img src="agencia-fake/img/smartphone.png" alt="Smartphone simbolizando a criação de aplicativos mobile">
                 
                 <div class="card-text">
                     <h3>Desenvolvimento de apps</h3>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/agencia-fake/img/marketing.png" alt="Notebook com simbolo de auto-falante representado o marketing digital">
+                <img src="agencia-fake/img/marketing.png" alt="Notebook com simbolo de auto-falante representado o marketing digital">
                 <div class="card-text">
                     <h3>Marketing digital</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut sequi qui pariatur amet! Aut maiores ut alias modi illum sit placeat corporis tempore nisi magni esse, accusamus, architecto inventore.</p>
@@ -85,6 +85,6 @@
         <b class="copyright">© Todos os direitos reservados</b>
     </footer>
 
-    <a href="#" class="whatsapp"><img src="/agencia-fake/img/whats.png" alt="Símbolo do whatsapp para contatar a Agência"></a>
+    <a href="#" class="whatsapp"><img src="agencia-fake/img/whats.png" alt="Símbolo do whatsapp para contatar a Agência"></a>
 </body>
 </html>
